--- a/assets/less/content/lists.less
+++ b/assets/less/content/lists.less
@@ -1,6 +1,6 @@
 /**
  * Author:      Matt Hinchliffe <www.maketea.co.uk>
- * Modified:    22/03/2012
+ * Modified:    04/04/2012
  * Description: Useful classes for formatting lists
  */
 
@@ -9,7 +9,7 @@
 	padding-left:0;
 	list-style-type:none;
 }
-	.inline-list > li {
+	.inline-list li {
 		display:inline;
 		margin:0;
 	}
@@ -20,15 +20,11 @@
 	list-style-type:none;
 }
 	.block-links li {
-		float:left;
+		display:inline;
 	}
 		.block-links a {
+			float:left;
 			display:block;
-			margin-right:1px;
-			padding:5px 5px 4px;
-			border-bottom:1px solid @colour-keyline;
-			text-decoration:none;
-			background:@colour-highlight;
 		}
 
 /* Inline definition list */
