--- a/assets/less/ie7.less
+++ b/assets/less/ie7.less
@@ -7,6 +7,11 @@
 	zoom:1;
 }
 
+/* Forcing hasLayout fixes the gaps between list-items bug */
+li {
+	zoom:1;
+}
+
 /* Blockquotes */
 blockquote {
 	display:block;
